--- a/spectrum.css
+++ b/spectrum.css
@@ -370,8 +370,8 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
     display:inline-block;
     *zoom: 1;
     *display: inline;
-    border: solid 1px #91765d;
-    background: #eee;
+    border: solid 0px #91765d;
+    background: #ffffff;
     color: #333;
     vertical-align: middle;
 }
